--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "movie-review-system",
   "version": "1.0.0",
   "description": "A Node.js movie review system with MySQL",
-  "main": "app.js",           
+  "main": "app.js",
   "scripts": {
-    "start": "node app.js"     
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
+    "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.13.0"
